# compiler

./: CMakeLists.txt  LICENSE  main.txt
grammar/: Comodot.g4
src/ast/: Ast.h  ast.h
src/cli/: main  main.cpp
src/codegen_llvm/: CMakeLists.txt  codegen.h  module_generator.cpp
src/itt/: Itt.h  IttType.h  itt.h  itt_type.h
src/itt/ast_to_itt_translator/: CMakeLists.txt  ast_to_itt_test.cpp  ast_to_itt_translator.cpp  ast_to_itt_translator.h
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.h  lexer_test.cpp
src/utilities/: CMakeLists.txt
src/utilities/logging/: CMakeLists.txt  ILogger.h
src/utilities/logging/console_logger/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  console_logger.cpp  console_logger.h
src/utilities/logging/file_logger/: CMakeLists.txt  FileLogger.cpp  FileLogger.h  file_logger.cpp  file_logger.h
src/utilities/logging/log_formatter/: CMakeLists.txt
src/utilities/logging/log_formatter/color_formatter/: CMakeLists.txt  ColorFormatter.cpp  ColorFormatter.h  color_formatter.cpp  color_formatter.h
src/utilities/logging/log_formatter/default_formatter/: CMakeLists.txt  DefaultFormatter.cpp  DefaultFormatter.h  default_formatter.cpp  default_formatter.h
src/utilities/logging/log_formatter/interface/: CMakeLists.txt  ILogFormatter.cpp  ILogFormatter.h  ilog_formatter.cpp  ilog_formatter.h
src/utilities/logging/logger_manager/: CMakeLists.txt  LoggerManager.cpp  LoggerManager.h  logger_manager.cpp  logger_manager.h
